# HydraProofs

./: FLTrust.sh  FoolsGold.sh
Applications/: CMakeLists.txt
Applications/src/: CMakeLists.txt  GKR.cpp  GKR.h  OpenAll.cpp  OpenAll.h  Poly_Commit.cpp  Poly_Commit.h  main.cpp  merkle_tree.cpp  merkle_tree.h  mimc.cpp  my_hhash.h  polynomial.cpp  sumcheck.cpp  sumcheck.h  test.sh  utils.cpp  utils.hpp  verifier.cpp
src/: GKR.cpp  GKR.h  Poly_Commit.cpp  Poly_Commit.h  main.cpp  mimc.cpp  pol_verifier.cpp  pol_verifier.h  prover.cpp  quantization.cpp  quantization.h  utils.cpp  utils.hpp  verifier.cpp
